Fix image paths

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
   <section class="gallery" id="gallery">
     <h2 class="section-title">Our Work</h2>
     <div class="gallery-grid">
-      <img src="C:\Users\LENOVO\Documents\images\nail1.jpg" alt="Nail Design 1">
-      <img src="C:\Users\LENOVO\Documents\images\nail2.jpg" alt="Nail Design 2">
-      <img src="C:\Users\LENOVO\Documents\images\nail3.jpg"alt="Nail Design 3">
-      <img src="C:\Users\LENOVO\Documents\images\nail4.jpg"alt="Nail Design 4">
-      <img src="C:\Users\LENOVO\Documents\images\nail5.jpg" alt="Nail Design 5">
-      <img src="C:\Users\LENOVO\Documents\images\nail6.jpg" alt="Nail Design 6">
+      <img src="images/nail1.jpg" alt="Nail Design 1">
+      <img src="images/nail2.jpg" alt="Nail Design 2">
+      <img src="images/nail3.jpg"alt="Nail Design 3">
+      <img src="images/nail4.jpg"alt="Nail Design 4">
+      <img src="images/nail5.jpg" alt="Nail Design 5">
+      <img src="images/nail6.jpg" alt="Nail Design 6">
     </div>
   </section>
   
@@ -100,9 +100,9 @@
       <p><strong>Email:</strong> glamournailaddis@yahoo.com</p>
       <p><strong>Addresses:</strong> 1.Bole, Morning Star Mall<br> 2.Gerji,Alfoz plaza <br> 3.Sumit, Fiyelbet <br> 4.Bisrate gebriel,Tsemex Apartment<br> 5.Bole, reality plaza <br> 6. 4Kilo, Ambasader Mall <br>7. Adama, Nafran Mall, Addis Ababa, Ethiopia</p>
       <div class="social-icons">
-        <a href="https://www.instagram.com/glamournail_addis1/"><img src="C:\Users\LENOVO\Documents\images\instagram icon.jpg" alt="Instagram" /></a>
-        <a href="https://web.facebook.com/GlamourEthiopia/?_rdc=1&_rdr#"><img src="C:\Users\LENOVO\Documents\images\facebook icon.jfif" alt="Facebook" /></a>
-        <a href="https://t.me/GlamourNailandLash"><img src="C:\Users\LENOVO\Documents\images\telegram icon.jpg" alt="Telegram" /></a>
+        <a href="https://www.instagram.com/glamournail_addis1/"><img src="images/instagram icon.jpg" alt="Instagram" /></a>
+        <a href="https://web.facebook.com/GlamourEthiopia/?_rdc=1&_rdr#"><img src="images/facebook icon.jfif" alt="Facebook" /></a>
+        <a href="https://t.me/GlamourNailandLash"><img src="images/telegram icon.jpg" alt="Telegram" /></a>
       </div>
     </div>
   </section>
